RESOLVED FIXED38350
REGRESSION (r57820): Controller is not displayed in window when opening a MP3 file in browser window
https://bugs.webkit.org/show_bug.cgi?id=38350
Summary REGRESSION (r57820): Controller is not displayed in window when opening a MP3...
mitz
Reported 2010-04-29 14:21:06 PDT
<rdar://problem/7918086> To reproduce, open the URL. The MP3 loads and plays but no controller is displayed in window. Patch coming soon!
Attachments
Ignore player natural size before metadata has loaded, special-case media documents, don’t special-case zero-size video (6.83 KB, patch)
2010-04-29 14:58 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2010-04-29 14:58:21 PDT
Created attachment 54738 [details] Ignore player natural size before metadata has loaded, special-case media documents, don’t special-case zero-size video
Eric Carlson
Comment 2 2010-04-29 15:16:15 PDT
> * bindings/js/ScriptCallStack.cpp: > - (WebCore::ScriptCallStack::ScriptCallStack): If the caller is unknown, the line number and source information is still availble so pass it to the ScriptCallFrame being constructed. > + (WebCore::ScriptCallStack::ScriptCallStack): If the caller is unknown, the line number and source information is still available so pass it to the ScriptCallFrame being constructed. > Nice catch, an eleven week old misspelling!
mitz
Comment 3 2010-04-29 15:22:39 PDT
WebKit Review Bot
Comment 4 2010-04-29 15:53:23 PDT
http://trac.webkit.org/changeset/58543 might have broken Qt Linux Release
Note You need to log in before you can comment on or make changes to this bug.