<rdar://problem/7918086> REGRESSION (r57820): Controller is not displayed in window when opening a MP3 file in browser window https://bugs.webkit.org/show_bug.cgi?id=38350

Reviewed by Simon Fraser.

WebCore: 

Tests: media/audio-only-video-intrinsic-size.html
       media/media-document-audio-size.html

* rendering/RenderVideo.cpp:
(WebCore::RenderVideo::RenderVideo): Until metadata is available, ignore the natural size
reported by the player.
(WebCore::RenderVideo::videoSizeChanged): Respect a natural size of zero if reported by the
player, except in standalone media documents.

LayoutTests: 

* media/audio-only-video-intrinsic-size-expected.txt: Added.
* media/audio-only-video-intrinsic-size.html: Added.
* media/media-document-audio-size-expected.txt: Added.
* media/media-document-audio-size.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@58543 bbb929c8-8fbe-4397-9dbb-9b2b20218538